--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,20 @@
-version: '3'
+version: "3.9"
 services:
   angular-app:
     build: .
     ports:
-      - "80:80"
+      - "8080:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - mongodb_container
+
+  mongodb_container:
+    image: mongo:latest
+    ports:
+      - 27017:27017
+    volumes:
+      - mongodb_data_container:/data/db
+
+volumes:
+  mongodb_data_container:
