--- a/nginx.conf
+++ b/nginx.conf
@@ -16,4 +16,14 @@ server {
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
+
+    # Nueva ubicación para la ruta /user/create
+    location /user/create {
+        proxy_pass http://18.191.42.205:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
 }
