back to localhost

--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ server {
 
     # Nueva ubicación para la ruta /user/create
     location /user/create {
-        proxy_pass http://18.191.42.205:8080;
+        proxy_pass http://localhost:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
